argocd/manifests/reclip/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reclip
  namespace: reclip
  labels:
    app: reclip
spec:
  type: ClusterIP
  selector:
    app: reclip
  ports:
    - name: http
      port: 8899
      targetPort: 8899
      protocol: TCP
